<resources>
    <string name="app_name">AudIOWave</string>
    <string name="pauseButton">Pause</string>

    <string name="stop">Stop</string>
    <string name="status_record">Recording…</string>
    <string name="status_not_record">Tap the button to start recording</string>
    <string name="startRecord">Start Record</string>
    <string name="record_stopButton">Record/Stop</string>
    <string name="markButton">Highlight</string>
    <string name="toRecords">Records</string>
    <string name="calls">Calls</string>
    <string name="searchPlaceholder">Search all records</string>
    <string name="toMenu">Menu</string>
    <string name="toSettings">Settings</string>
    <string name="playButton">Play</string>
    <string name="recordName">Record No-01</string>
    <string name="recordLength">00:05:00</string>
    <string name="recordDate">27/Mar/24</string>
    <string name="daysSinceDelete">30 days</string>
    <string name="delete">Delete</string>
    <string name="recover">Recover</string>
    <string name="recordingInfo">Recording: 00:00:01</string>
    <string name="paused_status">Recording Paused</string>
    <string name="fast_forward">fastForward</string>
    <string name="play">Play</string>
    <string name="rewind">rewind</string>
    <string name="go_back">goBack</string>
    <string name="properties">properties</string>
    <string name="bookmarkButton">BookMark</string>

    <string name="deleted_title">Recently Deleted Recordings</string>
    <string name="deleteAll">delete all</string>
    <string name="toRecordingStatistics">Recording Statistics</string>
    <string name="toScheduledRecording">Scheduled Recording</string>
    <string name="backButton">Back Button</string>
    <string name="channel_name">Background record channel</string>
    <string name="channel_description">This is being recorded, tap here to return</string>
    <string name="toSoundTest">Input/Output Test</string>

    <string-array name="output_formats">
        <item>MP3</item>
        <item>WAV</item>
        <item>OGG</item>
    </string-array>
</resources>