<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_state"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/toRecords"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/deleted_title"
            android:gravity="center"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/deleteAll"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_delete_sweep_36"
            android:background="@drawable/btn_state"
            android:contentDescription="@string/deleteAll"/>
    </LinearLayout>

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_border"
        android:baselineAligned="false"
        android:drawableStart="@drawable/baseline_search_24"
        android:inputType="text"
        android:hint="@string/searchPlaceholder"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/scrollList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:contentDescription="scrollView">

    </ListView>

</LinearLayout>