<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="@color/md_grey_800xxx"
    android:padding="20dp"
    tools:viewBindingIgnore="true"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/playButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_play_circle_24"
            android:contentDescription="@string/playButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordName"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recordDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordLength"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_gravity="@+id/recordDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordDate"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
