<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/md_grey_800xxx"
    android:padding="20dp"
    tools:viewBindingIgnore="true"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recordName"
                android:textColor="@color/white"
                android:textSize="16sp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordLength"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordDate"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/daysSinceDelete"
                android:textSize="16sp"
                android:textColor="@color/white_transparent_50"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:gravity="end"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/recover_btn"
            style="@style/Widget.RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:backgroundTint="@color/md_green_500"
            android:text="@string/recover"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/white"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            style="@style/Widget.RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_red_500"
            android:layout_margin="@dimen/spacing_small"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:text="@string/delete"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>
</LinearLayout>
