<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="@color/md_grey_800xxx"
    tools:viewBindingIgnore="true"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="4"
        android:layout_gravity="center_vertical"
        android:contentDescription="@null"
        android:src="@drawable/baseline_play_circle_24"/>

    <LinearLayout
        android:id="@+id/recordInfo"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/recordingInfo"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_pause"
        android:layout_width="@dimen/notification_btn"
        android:layout_height="@dimen/bottom_pnl_btn_size"
        android:adjustViewBounds="true"
        android:layout_weight="1"
        android:contentDescription="@string/pauseButton"
        android:padding="@dimen/spacing_normal"
        android:layout_gravity="center_vertical"
        android:scaleType="center"
        android:src="@android:drawable/ic_media_pause"/>

    <ImageButton
        android:id="@+id/btn_stop"
        android:layout_width="@dimen/notification_btn"
        android:layout_height="@dimen/bottom_pnl_btn_size"
        android:adjustViewBounds="true"
        android:layout_weight="1"
        android:contentDescription="@string/stop"
        android:padding="@dimen/spacing_normal"
        android:layout_gravity="center_vertical"
        android:scaleType="center"
        android:src="@drawable/ic_stop"/>
</LinearLayout>
