<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/md_grey_800xxx"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_arrow_back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recordStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/status_not_record"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="45sp" />

        </LinearLayout>

        <com.example.group03_voicerecorder_mobile.app.main.WaveformView
            android:id="@+id/waveformView"
            android:layout_width="match_parent"
            android:layout_height="325dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_state"
            android:clickable="false"
            android:contentDescription="@string/pauseButton"

            android:src="@drawable/ic_pause"
            app:tint="@color/white" />


        <ImageButton
            android:id="@+id/btnRecord_Stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/record_stopButton"
            android:src="@drawable/ic_record"
            app:tint="@color/md_red_500" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_state"
            android:clickable="false"
            android:contentDescription="@string/bookmarkButton"

            android:src="@drawable/bookmark_border_24"
            app:tint="@color/white" />


    </LinearLayout>


</LinearLayout>
